--- a/templates/public/complete_purchase/view.html
+++ b/templates/public/complete_purchase/view.html
@@ -88,19 +88,6 @@
                                                    value="{{ order.user.institucion|default:'' }}">
                                         </div>
                                     </div>
-                                    {#                                    <div class="col-lg-12">#}
-                                    {#                                        <label for="invoiceOption">Do you#}
-                                    {#                                            need an#}
-                                    {#                                            electronic invoice?<span#}
-                                    {#                                                    style="color:red;margin-left:2px;"><strong>*</strong></span>#}
-                                    {#                                            :</label>#}
-                                    {#                                        <select id="invoiceOption" class="form-control select2" name="invoiceOption">#}
-                                    {#                                            <option value="" disabled selected>Select an option</option>#}
-                                    {#                                            {% for i in INVOICE_OPTIONS %}#}
-                                    {#                                                <option value="{{ i.0 }}">{{ i.1 }}</option>#}
-                                    {#                                            {% endfor %}#}
-                                    {#                                        </select>#}
-                                    {#                                    </div>#}
                                     <div class="col-lg-12 mt-2">
                                         <div class="form-check">
                                             <label class="form-check-label ms-2" for="factura-info">
@@ -234,7 +221,7 @@
                                     <label class="form-check-label" for="id_metodo_pago_transferencia">
                                     <span>
                                         <span class="d-block text-dark fw-medium mb-1">Bank Transfer / Deposit</span>
-                                        <span class="text-body">For national payments (ECUADOR).</span>
+                                        <span class="text-body"><b>For national payments (ECUADOR).</b></span>
                                     </span>
                                     </label>
                                     <br>
@@ -285,13 +272,13 @@
                                         {% endfor %}
                                     </div>
 
-                                    {#                                    <input class="form-check-input metodo_pago" type="radio" name="metodo_pago" required#}
-                                    {#                                           id="id_metodo_pago_paypal" value="PAYPAL">#}
+                                    <input class="form-check-input metodo_pago" type="radio" name="metodo_pago" required
+                                           id="id_metodo_pago_paypal" value="PAYPAL">
                                     <label class="form-check-label" for="id_metodo_pago_paypal">
                                     <span>
-                                        <span class="d-block text-dark fw-medium mb-1">Paypal <span
-                                                class="ms-2 text-danger">* Available soon. We will send an email when it's ready.</span></span>
-                                        <span class="text-body">Pay from the platform. (for international payments)</span>
+                                        <span class="d-block text-dark fw-medium mb-1">Paypal <b
+                                                class="ms-2 text-primary" style="font-size:14px">* Only Available for payments out of Ecuador.</b></span>
+                                        <span class="text-body"><b>(For international payments).</b> Once the order is completed you will receive the payment link on your registered email address. Please, be attentive to Inbox or Spam folder</span>
                                     </span>
                                     </label>
                                 </div>
@@ -521,7 +508,7 @@
                         dataType: "json"
                     });
                 } else if (paymentMethodval === 'PAYPAL') {
-                    // Lógica para PayPal
+                     pagoPaypal(id)
                 } else {
                     mensajeWarning('Select a valid payment method.');
                 }
@@ -562,6 +549,67 @@
                         data: {
                             csrfmiddlewaretoken: '{{ csrf_token }}',
                             action: 'request_invoice',
+                            pk: id,
+                            ...billingData
+
+                        },
+                        dataType: "json",
+                        beforeSend: function () {
+                            pantallaespera();
+                        }
+                    }).done(function (data) {
+                        setTimeout($.unblockUI, 1);
+                        const data_ = data[0]
+                        if (data_.error === false) {
+                            window.location.href = data_.to;
+                        } else {
+                            mensajeWarning(data_.message);
+                        }
+                    }).fail(function (jqXHR, textStatus, errorThrown) {
+                        setTimeout($.unblockUI, 1);
+                        mensajeWarning('An error occurred on the server');
+                    }).always(function () {
+                    });
+                }
+            })
+        }
+
+        function pagoPaypal(id) {
+            Swal.fire({
+                title: `Please note that this option is only available for international payments. If you are in Ecuador, kindly select the bank transfer payment method.`,
+                text: "Once the order is completed you will receive the payment link on your registered email address. Please, be attentive to Inbox or Spam folder",
+                imageUrl: "/static/iconos/paypal_logo.png",
+                imageWidth: 200,
+                imageHeight: 200,
+                showCancelButton: true,
+                allowOutsideClick: false,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, I want to proceed!',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.value) {
+                    pantallaespera();
+                    let billingData = {};
+                    if ($('#factura-info').is(':checked')) {
+                        billingData = {
+                            billing_info: true,
+                            billing_name: $('#billing_name').val(),
+                            billing_tax_id: $('#billing_tax_id').val(),
+                            billing_address: $('#billing_address').val(),
+                            billing_email: $('#billing_email').val(),
+                            billing_phone: $('#billing_phone').val()
+                        };
+                    } else {
+                        billingData = {billing_info: false};
+                    }
+                    $.ajax({
+                        type: 'POST',
+                        url: '{{ request.path }}',
+                        async: false,
+                        data: {
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                            action: 'pago_paypal',
                             pk: id,
                             ...billingData
 
