--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -1,11 +1,11 @@
 <header class="transparent">
-    <div class="container">
+    <div class="container header-container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 header-wrapper">
                 <!-- logo begin -->
-                <div id="logo">
+                <div id="logo" class="logo-container">
                     <a href="/">
-                        <img class="logo" src="{{ logo_white }}" alt="" style="width:160px;height: 40px">
+                        <img class="logo logo-image" src="{{ logo_white }}" alt="">
                     </a>
                 </div>
                 <!-- logo close -->
@@ -13,8 +13,9 @@
                 <!-- small button begin -->
                 <span id="menu-btn"></span>
                 <!-- small button close -->
+                
                 <!-- mainmenu begin -->
-                <ul id="mainmenu" class="ms-2">
+                <ul id="mainmenu" class="ms-2 main-menu">
                     <li><a href="/">Home<span></span></a></li>
 
                     <li>
@@ -22,26 +23,22 @@
                     </li>
 
                     <li>
-                        <a href="{% if request.path == '/' %}/#section-importante{% else %}/{% endif %}">For
-                            authors<span></span></a>
+                        <a href="{% if request.path == '/' %}/#section-importante{% else %}/{% endif %}">For authors<span></span></a>
                         <ul>
                             <li>
-                                <a href="{% if request.path == '/' %}/#importantdates{% else %}/{% endif %}">Important
-                                    Dates</a></li>
-                            <li><a href="{% if request.path == '/' %}/#guidelines{% else %}/{% endif %}">Guidelines</a>
+                                <a href="{% if request.path == '/' %}/#importantdates{% else %}/{% endif %}">Important Dates</a>
                             </li>
                             <li>
-                                <a href="{% if request.path == '/' %}/#callforpapers{% else %}/{% endif %}">Call
-                                    for Papers</a></li>
+                                <a href="{% if request.path == '/' %}/#guidelines{% else %}/{% endif %}">Guidelines</a>
+                            </li>
+                            <li>
+                                <a href="{% if request.path == '/' %}/#callforpapers{% else %}/{% endif %}">Call for Papers</a>
+                            </li>
                             <li>
                                 <a href="{% if request.path == '/' %}/#callforpapers{% else %}/{% endif %}">Templates</a>
                             </li>
                             <li>
-                                <a href="{% if request.path == '/' %}/#cameraready{% else %}/{% endif %}">Camera
-                                    Ready</a>
-                            </li>
-                            <li>
-                                <a href="/keynotes">Keynotes<span></span></a>
+                                <a href="{% if request.path == '/' %}/#cameraready{% else %}/{% endif %}">Camera Ready</a>
                             </li>
                             {% if request.user.is_authenticated %}
                                 <li>
@@ -50,11 +47,17 @@
                             {% endif %}
                         </ul>
                     </li>
+                    
+                    <li>
+                        <a href="/speakers/">Speakers<span></span></a>
+                    </li>
+                    
                     {% if not request.user.is_authenticated %}
                         <li>
                             <a href="{% if request.path == '/' %}/#section-register{% else %}/{% endif %}">Register<span></span></a>
                         </li>
                     {% endif %}
+                    
                     <li>
                         <a href="{% if request.path == '/' %}/#section-topics{% else %}/s{% endif %}">Topics<span></span></a>
                     </li>
@@ -62,22 +65,21 @@
                     <li>
                         <a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Committees<span></span></a>
                         <ul>
-                            {#                            <li>#}
-                            {#                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>#}
-                            {#                            </li>#}
-                            <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Organizing
-                                Committee</a></li>
-                            {#                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General#}
-                            {#                                Chairs</a></li>#}
+                            <li>
+                                <a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Organizing Committee</a>
+                            </li>
                         </ul>
                     </li>
 
-                    <li><a href="{% if request.path == '/' %}/#section-contacts{% else %}/{% endif %}">Contact
-                        US<span></span></a></li>
+                    <li>
+                        <a href="{% if request.path == '/' %}/#section-contacts{% else %}/{% endif %}">Contact US<span></span></a>
+                    </li>
+                    
                     {% if not request.user.is_authenticated %}
                         <li><a href="/login/">Login<span></span></a></li>
                     {% else %}
-                        <li><a href="javascript:void(0)">Hello, {{ request.user.primernombre }}<span></span></a>
+                        <li>
+                            <a href="javascript:void(0)">Hello, {{ request.user.primernombre }}<span></span></a>
                             <ul>
                                 <li><a href="/profile/"><i class="fa fa-user"></i> My Profile</a></li>
                                 {% if request.user.get_perfil_adm %}
@@ -85,14 +87,17 @@
                                 {% endif %}
                                 <li><a href="/logout/"><i class="fa fa-sign-out"></i> Log Out</a></li>
                                 {% if sesion_anterior %}
-
-                                    <li><a href="/seguridad/regresar-sesion/?path={{ request.path }}"><i
-                                            class="fa fa-user"></i> Return to my session</a></li>
+                                    <li>
+                                        <a href="/seguridad/regresar-sesion/?path={{ request.path }}">
+                                            <i class="fa fa-user"></i> Return to my session
+                                        </a>
+                                    </li>
                                 {% endif %}
                             </ul>
                         </li>
                     {% endif %}
                 </ul>
+                <div class=""></div>
             </div>
         </div>
     </div>
